crates/ink/tests/ui/contract/fail/trait-message-selector-overlap-2.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<1518209067>` for type `Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:43:9
   |
38 |         fn message(&self) {}
   |         -------------------- first implementation here
...
43 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Contract`

error[E0119]: conflicting implementations of trait `TraitCallForwarderFor<1518209067>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:41:5
   |
36 | /     impl TraitDefinition1 for Contract {
37 | |         #[ink(message)]
38 | |         fn message(&self) {}
39 | |     }
   | |_____- first implementation here
40 |
41 | /     impl TraitDefinition2 for Contract {
42 | |         #[ink(message)]
43 | |         fn message(&self) {}
44 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder`

error[E0283]: type annotations needed
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:19:1
   |
19 | #[ink::contract]
   | ^^^^^^^^^^^^^^^^
   | |
   | cannot infer type
   | help: use the fully qualified path to an implementation: `<Type as ImpliesReturn>::messageOutput`
   |
   = note: multiple `impl`s satisfying `_: ImpliesReturn<()>` found in the `ink` crate:
           - impl<Args, RetType> ImpliesReturn<RetType> for Execution<Args, RetType>;
           - impl<E, CallType, Args> ImpliesReturn<()> for ink::ink_env::call::CallBuilder<E, Set<CallType>, Set<ExecutionInput<Args>>, Set<()>>
             where E: ink::ink_env::Environment;
           - impl<T, E, CallType, Args> ImpliesReturn<T> for ink::ink_env::call::CallBuilder<E, Set<CallType>, Set<ExecutionInput<Args>>, Set<ReturnType<T>>>
             where E: ink::ink_env::Environment;
           - impl<T> ImpliesReturn<T> for T;
   = note: associated types cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`
note: required by a bound in `foo1::TraitDefinition::messageOutput`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:6:9
   |
4  |       #[ink::trait_definition(namespace = "same")]
   |       -------------------------------------------- required by a bound in this associated type
5  |       pub trait TraitDefinition {
6  | /         #[ink(message)]
7  | |         fn message(&self);
   | |__________________________^ required by this bound in `TraitDefinition::messageOutput`
   = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:19:1
   |
19 | #[ink::contract]
   | ^^^^^^^^^^^^^^^^
   | |
   | cannot infer type
   | help: use the fully qualified path to an implementation: `<Type as ImpliesReturn>::messageOutput`
   |
   = note: multiple `impl`s satisfying `_: ImpliesReturn<()>` found in the `ink` crate:
           - impl<Args, RetType> ImpliesReturn<RetType> for Execution<Args, RetType>;
           - impl<E, CallType, Args> ImpliesReturn<()> for ink::ink_env::call::CallBuilder<E, Set<CallType>, Set<ExecutionInput<Args>>, Set<()>>
             where E: ink::ink_env::Environment;
           - impl<T, E, CallType, Args> ImpliesReturn<T> for ink::ink_env::call::CallBuilder<E, Set<CallType>, Set<ExecutionInput<Args>>, Set<ReturnType<T>>>
             where E: ink::ink_env::Environment;
           - impl<T> ImpliesReturn<T> for T;
   = note: associated types cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`
note: required by a bound in `foo2::TraitDefinition::messageOutput`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:14:9
   |
12 |       #[ink::trait_definition(namespace = "same")]
   |       -------------------------------------------- required by a bound in this associated type
13 |       pub trait TraitDefinition {
14 | /         #[ink(message)]
15 | |         fn message(&self);
   | |__________________________^ required by this bound in `TraitDefinition::messageOutput`
   = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: this function depends on never type fallback being `()`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:27:5
   |
27 |     pub struct Contract {}
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see issue #123748 <https://github.com/rust-lang/rust/issues/123748>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: WrapperTypeDecode` will fail
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:38:9
   |
38 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^
   = note: `#[warn(dependency_on_unit_never_type_fallback)]` on by default
